# SATOR-Ops

./: .gitignore  DEPENDENCIES_INSTALLED.md  KAIRO_DEMO.md  KAIRO_INTEGRATION.md  KAIRO_QUICK_START.md  KAIRO_READY.md  KAIRO_SETUP_GUIDE.md  KAIRO_TEST_GUIDE.md  README.md  SOLANA_FIXES.md  SPONSORS.md  env.example  package.json  pnpm-lock.yaml  test_kairo.py  test_kairo_simple.py
apps/backend/: API_DOCS.md  DIAGNOSE_ROUTES.md  Dockerfile  FIXES_APPLIED.md  QUICK_FIX.md  TESTING.md  TESTING_GUIDE.md  config.py  main.py  package.json  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  config.py
apps/backend/app/ai/: __init__.py  anomaly_detector.py  nlp_processor.py  time_series.py  trust_scorer.py
apps/backend/app/api/: __init__.py  agent_tools.py  audit.py  ingest.py  overshoot_test.py  replay.py  scenario2_video.py  simulation.py  websocket.py
apps/backend/app/core/: __init__.py  decision_engine.py  mode_manager.py  replay_engine.py  temporal_reasoning.py  trust_calculator.py
apps/backend/app/data/: seed_data.py
apps/backend/app/db/: __init__.py  connection.py  database.py  models.py  repository.py
apps/backend/app/integrations/: __init__.py  base.py
apps/backend/app/models/: __init__.py  artifact.py  audit.py  decision.py  events.py  mcp.py  (+5 more)
apps/backend/docs/: OVERSHOOT_INGEST.md  SCENARIO_WORKFLOWS.md  TESTING_OVERHOOT.md
apps/backend/scripts/: check_routes.py  generate_solana_keypair.py  kairo_ci_check.py  quick_test.py  register_contract.py  test_overshoot.py  test_scenario.py
apps/backend/tests/: __init__.py  test_sator_flow.py
(+167 files in other folders)
